feat: system category page, fix salary composition table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       type="text/css"
       href="https://cdn3.devexpress.com/jslib/25.1.6/css/dx.material.blue.light.css"
     />
-    <title>Vite App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Thành phần lương</title>
   </head>
   <body>
     <div id="app"></div>
